--- a/styles/base.css
+++ b/styles/base.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --font-family: 'Comfortaa', sans-serif;
+  --font-family: 'Josefin Sans', sans-serif;
   --default-text-color: rgb(35, 32, 32);
 
   --frame-color: lightblue;
