Initial fetching success

--- a/components/charactercard/index.html
+++ b/components/charactercard/index.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="/styles/base.css" />
     <link rel="stylesheet" href="/components/charactercard/charactercard.css" />
+    <script src="/scripts/charactercards.js" defer></script>
     <title>Character Card</title>
   </head>
   <body>
