Add -fetch with api for 8 chars -layout character card

--- a/components/charactercard/index.html
+++ b/components/charactercard/index.html
@@ -16,8 +16,8 @@
     <title>Character Card</title>
   </head>
   <body>
-    <section id="characters">
-      <figure class="character__icon">
+    <section id="characters" data-js="characters">
+      <figure class="character__card" data-js="character__card">
         <img
           src="https://rickandmortyapi.com/api/character/avatar/143.jpeg"
           alt="variable"
