--- a/components/charactercard/charactercard.css
+++ b/components/charactercard/charactercard.css
@@ -1,8 +1,13 @@
-.character__icon {
-  width: 40%;
+.character__card {
+  max-width: 14rem;
   background-color: red;
 }
 
-.character__icon figcaption {
+.character__card img {
+  max-width: 100%;
+  height: auto;
+}
+
+.character__card figcaption {
   text-align: center;
 }
