Add background-size to cover

--- a/styles/base.css
+++ b/styles/base.css
@@ -35,6 +35,7 @@ main {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-size: cover;
 }
 
 /*---------------------------------------------------------*/
