--- a/pages/characterDetails/characterDetails.css
+++ b/pages/characterDetails/characterDetails.css
@@ -1,4 +1,11 @@
 .character__details {
   display: flex;
   flex-direction: column;
+  margin: 8rem 1rem;
+  background-color: black;
+  color: var(--ricky-and-morty-text-color);
+}
+
+.character__mainDetails {
+  display: flex;
 }
