--- a/styles/base.css
+++ b/styles/base.css
@@ -37,6 +37,7 @@ main {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  padding: 0 1rem;
 }
 
 /*---------------------------------------------------------*/
