Switch default color to rick-and-morty-text-color - fixes #15

--- a/styles/base.css
+++ b/styles/base.css
@@ -21,7 +21,7 @@
 html {
   font-size: 16px;
   font-family: var(--font-family);
-  color: var(--default-text-color);
+  color: var(--ricky-and-morty-text-color);
 }
 
 html,
