--- a/pages/episodeDetails/episodeDetails.css
+++ b/pages/episodeDetails/episodeDetails.css
@@ -7,7 +7,7 @@
 .charactercard {
   display: flex;
   border-radius: 5px;
-  background-color: gray;
+  background-color: black;
   height: 12rem;
 }
 
