--- a/styles/base.css
+++ b/styles/base.css
@@ -25,8 +25,7 @@ html {
 }
 
 html,
-body,
-main {
+body {
   height: 100%;
   margin: 0;
 }
@@ -37,7 +36,7 @@ main {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  padding: 0 1rem;
+  padding: 5rem 1rem;
 }
 
 /*---------------------------------------------------------*/
