Add navigation via navbar

--- a/styles/base.css
+++ b/styles/base.css
@@ -39,4 +39,8 @@ main {
   padding: 5rem 1rem;
 }
 
+section[hidden] {
+  display: none;
+}
+
 /*---------------------------------------------------------*/
