--- a/pages/charactercard/charactercard.css
+++ b/pages/charactercard/charactercard.css
@@ -1,10 +1,11 @@
 .character__figures {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
 }
 
 .character__card {
-  max-width: 14rem;
+  max-width: 20rem;
   background-color: black;
 }
 
