Delete not used css vars

--- a/styles/base.css
+++ b/styles/base.css
@@ -9,12 +9,6 @@
   --default-text-color: rgb(35, 32, 32);
   --ricky-and-morty-text-color: rgb(44, 169, 167);
 
-  --frame-color: lightblue;
-  --background-color: rgb(213, 233, 213);
-  --card-color: var(--frame-color);
-  --button-color: rgb(237, 193, 18);
-  --tag-color: rgb(145, 197, 215);
-
   --boxshadow-grey: 0px 2px 5px rgba(25, 50, 81, 0.5);
 }
 
@@ -26,7 +20,7 @@ html {
 
 html,
 body {
-  height: 100%;
+  /* height: 100%; */
   margin: 0;
 }
 
