--- a/pages/locations/locations.css
+++ b/pages/locations/locations.css
@@ -12,8 +12,9 @@
 .location {
   padding: 0.75rem;
   cursor: pointer;
-  border: 1px solid black;
+  border: 1px solid var(--ricky-and-morty-text-color);
   border-radius: 5px;
+  background-color: black;
 }
 
 .location h3 {
